third_party/WebKit/Source/core/frame/RemoteFrameView.h
@@ -41,7 +41,9 @@ class RemoteFrameView final : public GarbageCollectedFinalized<RemoteFrameView>,
   void InvalidateRect(const IntRect&);
   void SetFrameRect(const IntRect&) override;
   const IntRect& FrameRect() const override { return frame_rect_; }
-  void Paint(GraphicsContext&, const CullRect&) const override {}
+  void Paint(GraphicsContext&,
+             const GlobalPaintFlags,
+             const CullRect&) const override {}
   void UpdateGeometry() override;
   void Hide() override;
   void Show() override;
